# parquet-to-json

./: .gitignore  README.md  converter.py  pyproject.toml
