[tool.poetry]
name = "parquet-to-json"
version = "0.1.0"
description = ""
authors = ["tim-hub <tim-hub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
pyarrow = "^14.0.2"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
